# project-pulse

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  notes.txt
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: arrangement.rs  asset_pool.rs  clip.rs  decoder.rs  engine.rs  mixer.rs  mod.rs  preview_mixer.rs  project_state.rs  resampler.rs  thread_pool.rs  timeline_event.rs  timeline_mixer.rs  track.rs  track_clip.rs  transport.rs
src-tauri/src/audio/snapshot/: bus_node.rs  clip_event.rs  clip_node.rs  data_nodes.rs  master_node.rs  mod.rs  project_snapshot.rs  render_graph.rs  scheduler.rs  track_node.rs  transport_runtime.rs
src-tauri/src/commands/: fs.rs  mixer.rs  mod.rs  preview.rs  timeline.rs  transport.rs
src-tauri/src/core/: constants.rs  fs_utils.rs  initializator.rs  logger.rs  mod.rs  notify.rs  project.rs  types.rs
src/components/: AppShell.tsx  Browser.tsx  Layout.tsx  MenuPanel.tsx  Mixer.tsx  PlaybackControls.tsx  Timeline.tsx
src/components/parts/: GlobalLoader.tsx  InsertTrackMenu.tsx  MixerTrack.tsx  NotificationListener.tsx  TimelineBar.tsx  TimelineClip.tsx  TimelineGridLines.tsx  TimelineTrack.tsx
src/helpers/: constants.ts  defaultLayoutModel.ts  enums.ts  functions.ts
src/stores/: dragStore.ts  globalStore.ts  projectStore.ts  timelineStore.ts  trackStore.ts
src/types/: BrowserNode.ts  Clip.ts  Track.ts  Transport.ts
