[package]
name = "project-pulse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "project_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ringbuf = "0.4.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["mp3", "wav", "aiff", "flac"] }
cpal = { version = "0.17.0" }
tauri-plugin-dialog = "2"
once_cell = "1.21.3"
tauri-plugin-fs = "2"
walkdir = "2.5.0"
rubato = "0.16.2"
anyhow = "1.0.100"
fern = "0.7.1"
log = "0.4.29"
nanoid = "0.4.0"
atomic_float = "1.1.0"
